--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -66,33 +66,33 @@
 <link href='http://fonts.googleapis.com/css?family=Alegreya:700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Changa+One:400,400italic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/modernizr-2.6.2.min.js"></script>
+<script src="/static/js/modernizr-2.6.2.min.js"></script>
 
 <!-- {#[if IE 9 ]><link href="/static/css/styleie9.css" rel="stylesheet"> <![endif]#}
 
-{#[if lte IE 8 ]> <link href="/static/css/styleie8.css" rel="stylesheet"> <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/html5.js"></script><![endif]#} -->
+{#[if lte IE 8 ]> <link href="/static/css/styleie8.css" rel="stylesheet"> <script src="/static/js/html5.js"></script><![endif]#} -->
 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/modernizr-2.6.2.min.js"></script>
+<script src="/static/js/modernizr-2.6.2.min.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery-ui.min.js"></script> 
+<script src="/static/js/jquery-ui.min.js"></script> 
 
 <!-- JS file -->
 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/bootstrap.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easing.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.flexslider.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.elastislide.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.selectbox-0.2.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.nouislider.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.isotope.min.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/cloudzoom.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.parallax.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.inview.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.jcarousel.min.js"></script> 
+<script src="/static/js/bootstrap.js"></script> 
+<script src="/static/js/jquery.easing.js"></script> 
+<script src="/static/js/jquery.flexslider.js"></script> 
+<script src="/static/js/jquery.elastislide.js"></script> 
+<script src="/static/js/jquery.selectbox-0.2.js"></script> 
+<script src="/static/js/jquery.nouislider.js"></script> 
+<script src="/static/js/jquery.isotope.min.js"></script> 
+<script src="/static/js/cloudzoom.js"></script>
+<script src="/static/js/jquery.parallax.js"></script> 
+<script src="/static/js/jquery.inview.js"></script> 
+<script src="/static/js/jquery.jcarousel.min.js"></script> 
 <script src="{{ url_for('static', filename='js/jquery.circliful.js')}}"></script>
 <script src="{{ url_for('static', filename='js/jquery.circliful.min.js')}}"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Reco.js"></script> 
-<!-- <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Reco.js"></script> -->
+<script src="/static/js/Reco.js"></script> 
+<!-- <script src="/static/js/Reco.js"></script> -->
 
 <script>
 $( document ).ready(function() {
@@ -102,10 +102,10 @@ $( document ).ready(function() {
     });
 </script>
 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/scripts.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/doubletaptogo.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/navigation.js"></script> 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.fastLiveFilter.js"></script>
+<script src="/static/js/scripts.js"></script>
+<script src="/static/js/doubletaptogo.js"></script>
+<script src="/static/js/navigation.js"></script> 
+<script src="/static/js/jquery.fastLiveFilter.js"></script>
 <!--FaceBook Script-->
 <script>
 (function(d, s, id) {
@@ -319,11 +319,11 @@ so just answer few questions and we will suggest the best product according to y
 
 
 
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easy-autocomplete.min.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Bazaarfunda.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/toucheffects.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easing.js"></script>
-<!-- <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/overrides.js"></script> -->
+<script src="/static/js/jquery.easy-autocomplete.min.js"></script>
+<script src="/static/js/Bazaarfunda.js"></script>
+<script src="/static/js/toucheffects.js"></script>
+<script src="/static/js/jquery.easing.js"></script>
+<!-- <script src="/static/js/overrides.js"></script> -->
 <!-- Google Analytics -->
 <div style="align:center">
 <script>
