og image mistake

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -26,7 +26,7 @@
   <meta property="og:description" content="BazaarFunda.com - {{entry.description}}"  />
   <meta property="og:image" content="{{entry.thumbnail}}" />
 {%else%}
-  <meta property="og:image" content="hhttps://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/websitelogo.png" />
+  <meta property="og:image" content="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/websitelogo.png" />
   
   <meta property="og:description" content="BazaarFunda.com - Discover Products and prices across different websites, Specification and User Experience comparison of Products"  />
 {%endif%}
