--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -279,7 +279,10 @@ so just answer few questions and we will suggest the best product according to y
                       {%endfor%}
                       </ul>
                   </li>
-                  <li> <a href="/compare"> Comparisons </a> <a class="icon-collapse collapsed" href="#level2" title="" data-toggle="collapse" ><i class="icon-up pull-right"></i><i class="icon-down pull-right"></i></a>
+                  <li> <a href="/compare"> Comparisons </a>
+                    
+                  </li>
+                  <li> <a data-toggle="modal" href="#RecoModal"> Recommend Me </a> 
                     
                   </li>
                  
@@ -306,6 +309,8 @@ so just answer few questions and we will suggest the best product according to y
                 </ul>
               </li>
               <li class="dropdown"> <a href="/compare">Comparisons</a>               
+              </li> 
+              <li class="dropdown"> <a data-toggle="modal" href="#RecoModal">Recommend Me</a>               
               </li>              
               </ul>
           </nav>
