--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -279,7 +279,7 @@ so just answer few questions and we will suggest the best product according to y
                       {%endfor%}
                       </ul>
                   </li>
-                  <li> <a href="/compare"> Comparisons </a>
+                  <li> <a href="/compare"> Comparisons </a> 
                   </li>
                   <li> <a data-toggle="modal" href="#RecoModal"> Recommend Me </a> 
                     
@@ -324,7 +324,8 @@ so just answer few questions and we will suggest the best product according to y
 
 
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easy-autocomplete.min.js"></script>
-<script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Bazaarfunda.js"></script>
+<!-- <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/Bazaarfunda.js"></script> -->
+<script src="/static/js/Bazaarfunda.js"></script>
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/toucheffects.js"></script>
 <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/jquery.easing.js"></script>
 <!-- <script src="https://s3-ap-southeast-1.amazonaws.com/bazaarfunda/Website/static/js/overrides.js"></script> -->
