Email Me and landing page lowest price link

--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -67,6 +67,9 @@
                     <input type="email" class="register-input" placeholder="Your Email Address" id= "{{cartDetails[i].master.product_id}}_email">
                     <input type="submit" value="Submit" class="register-button">
                   </form>
+
+                  <div id="submitsuccess_{{cartDetails[i].master.product_id}}">
+                    </div>
                 
               {# </div> #}
               {# Price Alert #}
